@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncap.h,v 1.88 2010-01-05 20:02:17 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncap.h,v 1.89 2010-04-08 22:57:14 zender Exp $ */
 
 /* Purpose: netCDF arithmetic processor definitions and function prototypes for ncap.c, ncap_utl.c, ncap_lex.l, and ncap_yacc.y */
 
@@ -153,7 +153,7 @@ opr_ctl /* [fnc] Operation controller function Nie02 opr() */
  ... /* I [llp] Ellipsis defined in stdarg.h */
  ); /* end opr_ctl() */
 
-int yyerror(prs_sct* prs_arg, const char * const sng);
+int NCOyyerror(prs_sct* prs_arg, const char * const sng);
 /* End funtions in ncap_yacc.y */
 
 /* Begin funtions in ncap_utl.c */
@@ -219,6 +219,7 @@ var_sct *ncap_scv_var_mod(scv_sct scv,var_sct *var);
 var_sct *ncap_scv_var_pwr(scv_sct scv,var_sct *var);
 void ncap_fnc_add(char *nm, double (*fnc_dbl)());
 void nco_lbr_vrs_prn(void);
+
 /* End funtions in ncap_utl.c */
 
 /* Source code for following functions is generated by parser but parser
