@@ -1,3 +1,10 @@
+2010-04-08  Charlie Zender  <zender@uci.edu>
+
+	* Apply patches from Denis Nadeau to prevent namespace clashes
+	between NCO symbols generated by Flex/Bison, and those symbols
+	generated by other programs (MPI, netCDF) that also use
+	Flex/Bison. 
+
 2010-04-06  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.2 release procedure:
